--- a/Spring-10-ORM-TableCreation/src/main/resources/application.properties
+++ b/Spring-10-ORM-TableCreation/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.datasource.password=181295Meron
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
 
 
 spring.jpa.hibernate.ddl-auto=create
