--- a/Spring-10-ORM-TableCreation/src/main/resources/application.properties
+++ b/Spring-10-ORM-TableCreation/src/main/resources/application.properties
@@ -8,7 +8,9 @@
 #spring.jpa.show-sql=true
 #spring.h2.console.path=/h2-console
 #spring.h2.console.enabled=true
-server.port=8082
+
+
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
@@ -18,8 +20,9 @@ spring.datasource.password=181295Meron
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
+#if we want to create a table using sql schema
 #spring.sql.init.mode=always
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
 
-
+#if we want to create our table using hibernate we need the below line
 spring.jpa.hibernate.ddl-auto=create
