--- a/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
+++ b/Spring-13-ORM-CinemaLab/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.password=181295Meron
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+
+#spring.flyway.baseline-on-migrate=true
+
+spring.flyway.enabled=false
