--- a/Spring-014/src/main/resources/application.properties
+++ b/Spring-014/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/cydeo
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=181295Meron
 
@@ -10,10 +10,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 #spring.flyway.baseline-on-migrate=true
 
-spring.flyway.enabled=false
+#spring.flyway.enabled=false
 
-#spring.sql.init.mode=always
-
-
-
-#spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
